fixed gaps

--- a/src/components/HeroSlider/HeroSlider.scss
+++ b/src/components/HeroSlider/HeroSlider.scss
@@ -37,10 +37,6 @@ $desktop-height-img: 400px;
   }
 }
 
-.slick-track {
-  gap: 0px !important;
-}
-
 .slick-dots {
   li {
     button:before {
